Bug 91393 - Writer AutoText dialog not fully painted
Summary: Writer AutoText dialog not fully painted
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta4
Keywords: regression
: 91394 92102 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-19 15:42 UTC by Michael Stahl
Modified: 2016-10-25 19:20 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of the bug on Fedora 21 (43.23 KB, image/png)
2015-05-19 15:42 UTC, Michael Stahl
Details
new screenshot (104.34 KB, image/png)
2015-10-12 12:49 UTC, Yan Pas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Stahl 2015-05-19 15:42:22 UTC
Created attachment 115722 [details]
screenshot of the bug on Fedora 21

Edit->AutoText...
the dialog is not fully painted, mostly black.

this happens only with SAL_USE_VCLPLUGIN=gtk, whereas kde4 and gen paint it correctly.

maybe related to timer re-work?
Comment 1 Michael 2015-05-19 16:05:12 UTC
Looks the same as https://bugs.documentfoundation.org/show_bug.cgi?id=91301
Comment 2 Jean-Baptiste Faure 2015-05-23 06:38:07 UTC
Reproducible with Version: 5.0.0.0.beta1+
Build ID: 7f49a466e85b5f5866e6af28d84ed06697e49d20
Ubuntu_15.04_x86-64
Locale : fr-FR (fr_FR.UTF-8)

Setting status to NEW.

Bets regards. JBF
Comment 3 Michael Meeks 2015-06-13 17:17:44 UTC
Can you confirm if Kendy's fix for 91301 nails it for you Michael ?
Comment 4 Jean-Baptiste Faure 2015-06-13 18:46:06 UTC
(In reply to Michael Meeks from comment #3)
> Can you confirm if Kendy's fix for 91301 nails it for you Michael ?

Sorry, no, I see the same behaviour in

Version: 5.0.0.0.beta3+
Build ID: 5a617461a77abaca69a335901c3e5d7b084cc73f
Ubuntu_15.04_x86-64
Locale : fr-FR (fr_FR.UTF-8)
just updated
and

Version: 5.1.0.0.alpha1+
Build ID: 762e90ffa0cd5f85dadd9bad93391d105e60e418
Ubuntu_15.04_x86-64
Locale : fr-FR (fr_FR.UTF-8)
updated yesterday

Best regards. JBF
Comment 5 Jean-Baptiste Faure 2015-06-13 20:43:59 UTC
There is a very similar problem with the extension manager.

Best regards. JBF
Comment 6 Commit Notification 2015-06-14 14:56:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8f324aebfb94c4b2023894121b954ad4f35eb395

Resolves: tdf#91393 autotext (etc) not fully drawn

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2015-06-14 14:58:23 UTC
*** Bug 91394 has been marked as a duplicate of this bug. ***
Comment 8 Jean-Baptiste Faure 2015-06-15 03:59:40 UTC
Thank you very much. Verified fixed in the master:
Version: 5.1.0.0.alpha1+
Build ID: a676ad5ec8348a6c8074e3a8d42590e8fd189cf5
Ubuntu_15.04_x86-64
Locale : fr-FR (fr_FR.UTF-8)

Tested with AUtoText, Extension Manager and Insert Index and Tables dialogs.
 
Do you plan to backport this fix to 5.0 ?

Best regards. JBF
Comment 9 David Tardon 2015-06-15 06:13:49 UTC
This actually makes things worse: After I close the originally opened document, start screen is not drawn and a new document (created by clicking in the right area) is not redrawn when switching applications. Menus are not drawn at all. And it seems dialogs are not drawn either.
Comment 10 Jean-Baptiste Faure 2015-06-15 07:10:51 UTC
(In reply to David Tardon from comment #9)
> This actually makes things worse: After I close the originally opened
> document, start screen is not drawn and a new document (created by clicking
> in the right area) is not redrawn when switching applications. Menus are not
> drawn at all. And it seems dialogs are not drawn either.

Oops, you are right. :-(

Best regards. JBF
Comment 11 Commit Notification 2015-06-15 10:12:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6dc1d2706f519d91617ac1a12fc2051d97ef98c0

another stab at tdf#91393

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2015-06-15 10:14:12 UTC
Lets have another stab at this. How's that ?
Comment 13 Commit Notification 2015-06-15 13:57:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf89d2d86099d0c4032c56b75505f135e286db87&h=libreoffice-5-0

Resolves: tdf#91393 autotext (etc) not fully drawn

It will be available in 5.0.0.0.beta4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Adolfo Jayme Barrientos 2015-06-16 11:23:55 UTC
*** Bug 92102 has been marked as a duplicate of this bug. ***
Comment 15 Jean-Baptiste Faure 2015-06-18 07:18:21 UTC
Verified again in 5.0 beta3+ and master under Ubuntu 15.04 x86-64 (built at home).

Best regards. JBF
Comment 16 Yan Pas 2015-10-12 12:49:52 UTC
Created attachment 119535 [details]
new screenshot

Faced again on version 5.0.2
Reproducable in 50% of cases. What I did - I have created alphabetical index and opened clicked "edit" several times. In the second or third time - the windows has become buggy
Comment 17 Jean-Baptiste Faure 2015-10-12 19:26:55 UTC
(In reply to Yan Pashkovsky from comment #16)
> Created attachment 119535 [details]
> new screenshot
> 
> Faced again on version 5.0.2
> Reproducable in 50% of cases. What I did - I have created alphabetical index
> and opened clicked "edit" several times. In the second or third time - the
> windows has become buggy


The bug report is about AutoText, for Index and table dialog, please file another bug report.
You assigned this bug to yourself. If you do not plan to fix the bug yourself, it is not something to do. Restoring previous bug state.

Best regards. JBF
Comment 18 Yan Pas 2015-10-12 20:21:17 UTC
I've assigned bug to myself accidenatally. New bug: https://bugs.documentfoundation.org/show_bug.cgi?id=94993